--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "dependencies": {
-    "@devvit/public-api": "0.12.0"
+    "@devvit/public-api": "0.12.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "typescript": "5.8.3"
   }
 }
